test/tests/compiler/15_arrays_and_pointer_arithmetic/valid/subscripting/subscript_precedence.plx
pub fn main(none) i32 {
    arr: [3]i32 = $(1, 2, 3)
    return (-arr[2] == -3)
}
