test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/compound_add_double_to_pointer.plx
#  If LHS of += or -= is a pointer, RHS must be an integer (not a double or pointer)
pub fn main(none) i32 {
    arr: [3]i32 = $(1, 2, 3)
    elem: *i32 = arr
    elem += 1.0
    return 0
}
